# scrivener-mcp

./: DESIGN-START.md  DESIGN.md  README.md  pyproject.toml
src/scrivener_mcp/: __init__.py  __main__.py  audit.py  models.py  parser.py  reader.py  search.py  server.py  snapshot.py  writer.py
tests/: conftest.py  test_parser.py  test_reader.py  test_search.py  test_snapshot.py  test_writer.py
tests/fixtures/TestProject.scriv/: TestProject.scrivx
tests/fixtures/TestProject.scriv/Files/Data/10101010-1010-1010-1010-101010101010/: content.rtf
tests/fixtures/TestProject.scriv/Files/Data/33333333-3333-3333-3333-333333333333/: content.rtf  synopsis.txt
tests/fixtures/TestProject.scriv/Files/Data/33333333-3333-3333-3333-333333333334/: content.rtf  synopsis.txt
tests/fixtures/TestProject.scriv/Files/Data/33333333-3333-3333-3333-333333333335/: content.rtf  synopsis.txt
tests/fixtures/TestProject.scriv/Files/Data/44444444-4444-4444-4444-444444444444/: content.rtf  notes.rtf
tests/fixtures/TestProject.scriv/Files/Data/44444444-4444-4444-4444-444444444445/: content.rtf  synopsis.txt
tests/fixtures/TestProject.scriv/Files/Data/44444444-4444-4444-4444-444444444446/: content.rtf
tests/fixtures/TestProject.scriv/Files/Data/66666666-6666-6666-6666-666666666666/: content.rtf  synopsis.txt
tests/fixtures/TestProject.scriv/Files/Data/88888888-8888-8888-8888-888888888881/: content.rtf  notes.rtf
tests/fixtures/TestProject.scriv/Files/Data/88888888-8888-8888-8888-888888888882/: content.rtf
(+8 files in other folders)
