[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrivener-mcp"
version = "0.1.0"
description = "MCP server for reading and writing Scrivener 3 projects"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "striprtf>=0.0.26",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
scrivener-mcp = "scrivener_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scrivener_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
